# alpha-gov-api

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/alpha-gov-api/: Cargo.toml
crates/alpha-gov-api-core/: Cargo.toml
crates/alpha-gov-api-core/src/: config.rs  error.rs  http.rs  lib.rs  output.rs
crates/alpha-gov-api-core/src/auth/: api_key.rs  callback.rs  mod.rs  oauth.rs  token_store.rs
crates/alpha-gov-api/src/: main.rs
docs/: plan.md  uk-government-apis.md
docs/apis/: 01-ch-company-information.md  02-ch-filing-transactions.md  03-hmrc-corporate-tax.md  04-hmrc-vat.md  05-hmrc-payroll.md  06-hmrc-customs-declarations.md  07-hmrc-goods-movement.md  08-hmrc-payments-agents.md  09-hmrc-business-obligations.md  10-trade-tariff.md  11-defra.md  12-govuk-platform.md
docs/superpowers/plans/: 2026-03-23-auth-infrastructure.md
docs/superpowers/specs/: 2026-03-23-auth-infrastructure-design.md
