[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/NeilRobbins-TaxSystems/alpha-gov-api"

[workspace.dependencies]
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
open = "5"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"
