[package]
name = "alpha-gov-api-core"
version = "0.1.0"
description = "Core types and output contract for alpha-gov-api"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
