[package]
name = "alpha-gov-api-core"
version = "0.1.0"
description = "Core types and output contract for alpha-gov-api"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
keyring = { workspace = true }
open = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
wiremock = { workspace = true }
